# pod-crab

./: .env  .gitignore  Cargo.toml  Dockerfile  bacon.toml  config.toml  docker-compose.yml  example.env  main.tf  package-lock.json  package.json  rspack.config.mjs  tailwind.config.js
api/: Cargo.toml
api/handlers/: mod.rs
api/handlers/members/: mod.rs
api/src/: lib.rs
api/src/handlers/: mod.rs
api/src/handlers/auth/: mod.rs  required_role_middleware.rs
api/src/handlers/episodes/: mod.rs  s3_presigned.rs
api/src/handlers/import/: mod.rs
api/src/handlers/members/: mod.rs
api/src/handlers/open_id_connect/: mod.rs
api/src/handlers/posts/: mod.rs
entities/: Cargo.toml
entities/src/: episode.rs  import.rs  import_row.rs  lib.rs  member.rs  post.rs  user.rs
entity/: member.rs  mod.rs
frontend/: index.js  package-lock.json  package.json
frontend/templates/: index.html.tera  layout.html.tera
frontend/templates/episodes/: list.html.tera
frontend/templates/import/: index.html.tera
frontend/templates/members/: list.html.tera  member_row.html.tera  new.html.tera
frontend/templates/posts/: list.html.tera  new.html.tera
migration/: Cargo.toml  mod.rs
migration/src/: lib.rs  m20220120_000001_create_post_table.rs  m20241205_170802_create_member_table.rs  m20250108_130829_AddEpisodeTable.rs  m20250108_130829_add_episode_and_user_table.rs  m20250405_063228_create_import.rs
service/: Cargo.toml  mutation.rs
service/src/: mutation.rs  query.rs
src/: index.js  main.rs
src/api/: mod.rs
src/api/handlers/index/: mod.rs
src/api/handlers/posts/: mod.rs
src/migration/: m20220120_000001_create_post_table.rs  m20241205_170802_create_members_table.rs
src/service/: query.rs
templates/episodes/: list.html.tera
templates/members/: list.html.tera
