[package]
name = "pod-crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["entities", "api", "service", "migration"]

[dependencies]
api = { path = "api" }
service = { path = "service" }
migration = { path = "migration" }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
poem = { version = "3.1.6", features = ["static-files","cookie","csrf", "fluent", "fluent-syntax", "i18n", "requestid"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
tera = "1.20.0"
dotenvy = "0.15"
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
