[package]
name = "service"
version = "0.1.0"
edition = "2024"
[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entities = { path = "../entities" }
sea-orm = "1.1.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.68.0"
tokio = { version = "1.42.0", features = ["full"] }
